# proxyko

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  release.yml  ruff.yml
src/: app.py  config.py  errors.py
src/db/: __init__.py
src/db/models/: __init__.py  common.py
src/middlewares/: __init__.py  auth.py  theme.py
src/modules/: auth.py  cookies.py  templates.py  utility.py
src/routes/: __init__.py  health.py  index.py  login.py  logout.py  pac.py  register.py
src/routes/api/: __init__.py
src/routes/api/internal/: proxy.py
src/routes/dashboard/: __init__.py  configs.py  devices.py  home.py  logs.py  proxy.py  settings.py  users.py
static/css/: components.css  fonts.css  global.css
static/css/pages/: auth.css  config.css  configs.css  dashboard.css  devices.css  error.css  home.css  logs.css  proxy.css  settings.css  users.css
static/js/lib/: qrcode.js
templates/: dashboard.config.html  dashboard.configs.html  dashboard.devices.html  dashboard.home.html  dashboard.layout.html  dashboard.logs.html  dashboard.proxy.html  dashboard.proxy.rule.html  dashboard.settings.html  dashboard.users.html  error.html  layout.html  login.2fa.html  login.html  register.html
templates/components/: alert.html
